syntax = "proto3";

option csharp_namespace = "AuthMicroservice.Protos";

package authmicroservice;

service JwtAuthProtoService {
	rpc Register(RegisterRequest) returns (SuccessJwtLoginResponse);
	rpc Login(LoginRequest) returns (SuccessJwtLoginResponse);
	rpc IsValidToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
	string username = 1;
	string password = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message SuccessJwtLoginResponse {
	string token = 1;
}

message ValidateTokenRequest {
	string token = 1;
}

message ValidateTokenResponse {
	bool valid = 1;
}